fix(material/sort): avoid center align for sort header (#30198)

--- a/src/material/sort/sort-header.scss
+++ b/src/material/sort/sort-header.scss
@@ -33,7 +33,6 @@
 }
 
 .mat-sort-header-content {
-  text-align: center;
   display: flex;
   align-items: center;
 }
